[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"
authors = [
  "serialexperimentscarina"
]

[[bin]]
name = "rust-game"

[dependencies]
piston = "0.55.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.83.0"
rand = "0.8.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html